[Identity] Fixing DCHECK when signing out

Need to use gaia::AreEmailsSame() instead of comparing emails directly.
Also, DCHECK_EQ() should be used instead of DCHECK().

Bug: 866801
Change-Id: I229e6aef631dca1f6ecf4c0242a11db15687d25a
Reviewed-on: https://chromium-review.googlesource.com/1148206
Reviewed-by: Mihai Sardarescu <msarda@chromium.org>
Commit-Queue: Jérôme Lebel <jlebel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577489}
Former-commit-id: 06477a0b61e2b4f445aea0e518439729abf59e7c